src/test/ui/generator/metadata-sufficient-for-layout.min_tait.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/metadata-sufficient-for-layout.rs:28:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

